src/objects/Application_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Community_Profile_Ids__c</fullName>
        <inlineHelpText>Semi-Colon delimited list of profile ids</inlineHelpText>
        <label>Community Profile Ids</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <label>Community URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Id__c</fullName>
        <label>Permission Set Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Application Setting</label>
</CustomObject>